--- a/src/assets/scss/color/_custom-properties.scss
+++ b/src/assets/scss/color/_custom-properties.scss
@@ -16,6 +16,8 @@ $base-color: (
 	"tertiary": color(_Orange),
 	"dark": color(_Nightblue),
 	"light": color(_White),
+	//"foreground": color(_Nightblue),
+	//"background": color(_White),
 	"notification": color(_Skyblue),
 	"error": color(_Red),
 	"warning": color(_Orange),
