major mobile improve

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -2,8 +2,7 @@
 @import "color";
 @import "settings";
 
-@import "modules/reset";
-@import "modules/prism";
+@import "modules";
 @import "content";
 @import "typography";
 
