--- a/src/.vuepress/theme/styles/_sidebar.scss
+++ b/src/.vuepress/theme/styles/_sidebar.scss
@@ -8,6 +8,15 @@
 	padding: 1rem;
 	&__toggle {
 		position: fixed;
+		border: 1px solid red;
+		top: 0;
+		left: 0;
+		width: 3rem;
+		height: 3rem;
+		z-index: 10;
+		&:hover {
+			border: 1px solid blue;
+		}
 	}
 	&__group {
 	}
