add tests for now

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,4 +1,4 @@
-@import "functions/index";
-@import "modules/grid/variables";
+@import "functions";
+@import "modules/grid";
 @import "color/base";
 @import "settings";
