--- a/src/assets/scss/functions/index.scss
+++ b/src/assets/scss/functions/index.scss
@@ -1,4 +1,5 @@
-@import "string";
-@import "math";
-@import "is";
-@import "number";
+@import "@henris/utils";
+// @import "string";
+// @import "math";
+// @import "is";
+// @import "number";
