--- a/src/assets/scss/color/_functions.scss
+++ b/src/assets/scss/color/_functions.scss
@@ -6,7 +6,7 @@
 
 	$s: to-lower-case($string);
 
-	@if char-at($s, 1) != "#" {
+	@if first-character($s) != "#" {
 		@warn '#{$string} is not a hex color code.';
 		@return $string;
 	}
@@ -14,25 +14,25 @@
 	// 3 digits
 	@if str-length($string) == 4 {
 		$rgb: (
-			(parseInt(char-at($s, 2) + char-at($s, 2), 16)),
-			(parseInt(char-at($s, 3) + char-at($s, 3), 16)),
-			(parseInt(char-at($s, 4) + char-at($s, 4), 16))
+			(parseInt(nth-character($s, 2) + nth-character($s, 2), 16)),
+			(parseInt(nth-character($s, 3) + nth-character($s, 3), 16)),
+			(parseInt(nth-character($s, 4) + nth-character($s, 4), 16))
 		);
 	}
 	// 6 digits
 	@else if str-length($string) == 7 {
 		$rgb: (
-			(parseInt(char-at($s, 2) + char-at($s, 3), 16)),
-			(parseInt(char-at($s, 4) + char-at($s, 5), 16)),
-			(parseInt(char-at($s, 6) + char-at($s, 7), 16))
+			(parseInt(nth-character($s, 2) + nth-character($s, 3), 16)),
+			(parseInt(nth-character($s, 4) + nth-character($s, 5), 16)),
+			(parseInt(nth-character($s, 6) + nth-character($s, 7), 16))
 		);
 	}
 
 	$red: nth($rgb, 1);
 	$green: nth($rgb, 2);
 	$blue: nth($rgb, 3);
-
-	@return rgb($red, $green, $blue);
+	$color: rgb($red, $green, $blue);
+	@return $color;
 }
 
 // color
@@ -47,7 +47,7 @@
 // Set the lightness of a Custom property or HEX Sass Variable
 
 @function setLightness($color, $lightness: 50, $alpha: 1) {
-	@if type-of($color) == "string" and char-at($color, 1) == "#" {
+	@if type-of($color) == "string" and nth-character($color, 1) == "#" {
 		$color: hexStringToRGB($color);
 	}
 	@if $alpha > 1 {
